Clean: Remove ignored files and update .gitignore
- Updated .gitignore to reflect new folder structure (output/, input/, model/)
- Removed test images from git tracking (input/*.heic, input/test_sample*.jpg)
- Removed auto-downloaded model file (model/hand_landmarker.task)
- Removed generated output files (output/*.json, output/*.png, output/card_detection_debug/*)

These files will be auto-generated or downloaded when needed and should not be version controlled.

--- a/.gitignore
+++ b/.gitignore
@@ -15,18 +15,18 @@ ENV/
 *.swo
 
 # Project outputs (keep structure, ignore contents)
-outputs/*.json
-outputs/*.png
-outputs/*.jpg
-outputs/intermediate/
-outputs/card_detection_debug/
+output/*.json
+output/*.png
+output/*.jpg
+output/intermediate/
+output/card_detection_debug/
 
 # Downloaded models (auto-downloaded on first run)
-models/*.task
+model/*.task
 
 # Test artifacts
-samples/test*.jpg
-samples/*.heic
+input/test*.jpg
+input/*.heic
 
 # OS
 .DS_Store
