Update .gitignore: exclude edge_refinement_debug directory
- Added output/edge_refinement_debug/ to .gitignore
- Removed 12 debug images from git tracking
- Debug images are generated at runtime and should not be committed
- Consistent with other debug directories (card_detection_debug, finger_segmentation_debug)

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ __pycache__/
 *.so
 .Python
 .venv/
-venv/
 ENV/
 
 # IDE
@@ -21,6 +20,7 @@ output/*.jpg
 output/intermediate/
 output/card_detection_debug/
 output/finger_segmentation_debug/
+output/edge_refinement_debug/
 
 # Downloaded models (auto-downloaded on first run)
 model/*.task
